--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,15 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "socket.io-client": "^4.6.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
+    "peerjs": "^1.3.1",
+    "simple-peer": "^9.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
