--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,25 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "peerjs": "^1.3.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "react-copy-to-clipboard": "^5.0.3",
+    "simple-peer": "^9.9.3",
     "socket.io-client": "^4.6.1",
-    "web-vitals": "^2.1.4",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
-    "peerjs": "^1.3.1",
-    "simple-peer": "^9.9.3"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
