--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "image-capture": "^0.4.0",
     "peerjs": "^1.3.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
